# retrocalc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
include/: cell.h  display.h  matrix.h  parser.h  screen.h  spreadsheet.h  terminal.h  welcome.h
src/: display.cpp  main.cpp  matrix.cpp  parser.cpp  screen.cpp  spreadsheet.cpp  terminal.cpp  welcome.cpp
tests/: CMakeLists.txt
